work in constructor